--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 			<nav>
 				<a href="#top">Home</a>
 				<span>|</span>
-				<a href="#one">Link 1</a>
+				<a href="#one">Manhole</a>
 				<span>|</span>
-				<a href="#two">Link 2</a>
+				<a href="#two">Antenna</a>
 				<span>|</span>
-				<a href="#three">Link 3</a>
+				<a href="#three">Marking</a>
 				<span>|</span>
-				<a href="#four">Link 4</a>
+				<a href="#four">CCTV</a>
 			</nav>
 		</section>
 	</header>
@@ -34,8 +34,8 @@
 
 		<section id="one">
 			<div class = "post">
-				<h3>One Title</h3>
-				<p>One Content</p>
+				<h3>Manhole</h3>
+				<p>Manhole is the entrance to the undergroud of the city where hidden power line are located. There are different types of manhole covers that represent either power company or pipe line company.</p>
 			</div>
 			<div class="g-row">
 				<div class="g-50">
@@ -57,8 +57,8 @@
 
 		<section id="two">
 			<div class = "post">
-				<h3>One Title</h3>
-				<p>One Content</p>
+				<h3>Antenna</h3>
+				<p>Antennas are used to catch signal for wireless devices. There are different forms of antenna depends on whether it is for TV, radio, internet connection and etc.</p>
 			</div>
 
 			<div class="g-row">
@@ -85,8 +85,8 @@
 
 		<section id="three">
 			<div class = "post">
-				<h3>One Title</h3>
-				<p>One Content</p>
+				<h3>Marking</h3>
+				<p>It is easy to spot markings in bright colour in Wellington street. They are usually for locating under grounf utilities.</p>
 			</div>
 
 			<div class="g-row">
@@ -114,8 +114,8 @@
 
 	<section id="four">
 		<div class = "post">
-			<h3>One Title</h3>
-			<p>One Content</p>
+			<h3>CCTV</h3>
+			<p>CCTVs are commonly used on the street or road for the public security purpose, but there are CCTVs used personal security in the place like public car park, store and apartment.</p>
 		</div>
 
 		<div class="g-row">
