--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<section id="three">
 			<div class = "post">
 				<h3>Marking</h3>
-				<p>It is easy to spot markings in bright colour in Wellington street. They are usually for locating under grounf utilities.</p>
+				<p>It is easy to spot markings in bright colour in Wellington street. They are usually for locating under ground utilities.</p>
 			</div>
 
 			<div class="g-row">
